chore: update favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="https://meetap-it.gitlab.io/emilia/assets/favicon.svg" type="image/svg+xml">
   <title>Emilia Vue Challenge</title>
   <meta name="description" content="Hiring Challenge for Frontend Engineer @Emilia">
 </head>
