--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="https://meetap-it.gitlab.io/emilia/assets/favicon.svg" type="image/svg+xml">
-  <title>Emilia Vue Challenge</title>
-  <meta name="description" content="Hiring Challenge for Frontend Engineer @Emilia">
+  <link rel="icon" href="https://assets.melli.com/favicon.svg" type="image/svg+xml">
+  <title>Melli Vue Challenge</title>
+  <meta name="description" content="Hiring Challenge for Frontend Engineer @Melli">
 </head>
 <body>
   <div id="app"></div>
